--- a/static/landing.css
+++ b/static/landing.css
@@ -1,3 +1,6 @@
+@font-face {
+  font-family: 'Upbolters';
+  src: url('/prueba-1/static/Italic.ttf') format('truetype');
 * {
     margin: 0;
     padding: 0;
