--- a/static/landing.css
+++ b/static/landing.css
@@ -118,7 +118,7 @@
 
   @font-face {
     font-family: 'Upbolters';
-    src: url('/static/Italic.ttf') format('truetype');
+    src: url('/prueba-1/static/Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
